--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -61,17 +61,18 @@ a {
   }
 
   .aside-nav-ul {
-
-    padding: 30px 0;
+    padding: 30px 10px;
   }
 
   .nav-link {
-    padding: 0.725rem 0.625rem;
+    padding: 0.5rem 0.625rem;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
     background-color: var(--main-color);
+    border-radius: 12px;
+    margin: 2px 0;
     span {
       transition: 0.3s ease-in-out;
       font-size: 17px;
@@ -84,6 +85,15 @@ a {
       span {
         transform: translateX(20px);
       }
+      background-color: var(--white);
+      .title {
+        color: var(--main-color);
+        font-weight: bold;
+      }
+      svg {
+        background-color: var(--main-color);
+        border-radius: 5px;
+      }
     }
   }
 
@@ -94,7 +104,17 @@ a {
     white-space: nowrap;
   }
 
-  .nuxt-link-active {}
+  .nuxt-link-active {
+    background-color: var(--white);
+    .title {
+      color: var(--main-color);
+      font-weight: bold;
+    }
+    svg {
+      background-color: var(--main-color);
+      border-radius: 5px;
+    }
+  }
 }
 
 /*__header-navbar__*/
@@ -110,6 +130,38 @@ a {
   .navbar-nav {
     align-items: center;
     gap: 30px;
+  }
+  .search-bar {
+    border-radius: 12px;
+    background-color: rgba(255,255,255,0.1);
+    position: relative;
+    width: 800px;
+    .input-search {
+      border: none;
+      outline: none;
+      width: 100%;
+      padding: 1rem 3rem;
+      background-color: transparent;
+      color: var(--white);
+    }
+
+    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: var(--white);
+      opacity: 1; /* Firefox */
+    }
+
+    :-ms-input-placeholder { /* Internet Explorer 10-11 */
+      color: var(--white);
+    }
+
+    ::-ms-input-placeholder { /* Microsoft Edge */
+      color: var(--white);
+    }
+    .search-icon {
+      position: absolute;
+      top: 13px;
+      left: 10px;
+    }
   }
   .user-dropdown{
     position: relative;
@@ -178,7 +230,6 @@ a {
 .fade-enter, .fade-leave-active {
   opacity: 0;
 }
-
 
 /*__book__*/
 .book-page {
@@ -296,8 +347,6 @@ a {
   .book-about {
   }
 }
-
-
 
 .tabs {
   position: relative;
@@ -452,7 +501,7 @@ a {
 }
 
 .review-card {
-  padding: 15px 15px 5px 15px;
+  padding: 15px;
   border-radius: 24px;
   background-color: var(--white);
   .review-card-header {
@@ -491,5 +540,60 @@ a {
         font-size: 14px;
       }
     }
+  }
+  .review-card-reactions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 5px 0;
+    .reaction-box {
+      background-color: var(--light-blue);
+      padding: 5px 10px;
+      border-radius: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 5px;
+      .icons {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        img {
+          margin-left: -8px;
+        }
+
+        img:nth-child(1) {
+          z-index: 3;
+        }
+        img:nth-child(2) {
+          z-index: 2;
+        }
+        img:nth-child(3) {
+          z-index: 1;
+        }
+      }
+      span {
+        color: var(--dark-gray);
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.audio-player {
+  background-color: var(--white);
+  padding: 15px;
+  border-radius: 12px;
+  position: fixed;
+  bottom: 15px;
+  z-index: 9999;
+  width: calc(100% - 260px);
+}
+
+@media(max-width:992px){
+  .audio-player {
+    background-color: red;
+    width: 100%;
   }
 }
