--- a/assets/scss/components/_TheAudioPlayer.scss
+++ b/assets/scss/components/_TheAudioPlayer.scss
@@ -6,6 +6,107 @@
   bottom: 15px;
   z-index: 9999;
   width: calc(100% - 260px);
+  .player-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 30px;
+    .player-info {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      width: fit-content;
+      gap: 15px;
+      img {
+        border-radius: 12px;
+      }
+      .text {
+        font-weight: 500;
+        color: var(--black);
+      }
+    }
+    .player-actions {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      button {
+        border: none;
+        background-color: transparent;
+      }
+      .center-btn {
+        border-radius: 50%;
+        background-color: rgba(58, 150, 121, 0.2);
+        padding: 5px;
+      }
+      .play-btn {
+        border-radius: 50%;
+        background-color: var(--main-color);
+        padding: 10px;
+      }
+    }
+    .player-progress{
+      width: 343px;
+      user-select: none;
+      position: relative;
+      .progress-bar {
+        height: 5px;
+        width: 100%;
+        cursor: pointer;
+        background-color: var(--dark-gray);
+        display: inline-block;
+        border-radius: 5px;
+        .progress-current{
+          height: inherit;
+          width: 0%;
+          background-color: var(--main-color);
+          border-radius: 10px;
+          position: relative;
+        }
+        .progress-dot {
+          width: 20px;
+          height: 20px;
+          background-color: var(--main-color);
+          position: absolute;
+          bottom: 18px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          span {
+            background-color: var(--white);
+            width: 10px;
+            height: 10px;
+            display: block;
+            border-radius: 50%;
+          }
+        }
+      }
+      .progress-bottom {
+        display: flex;
+        align-items: flex-end;
+        justify-content: space-between;
+        .progress-time {
+          color: var(--dark-gray);
+          font-weight: normal;
+          font-size: 12px;
+        }
+      }
+    }
+    .player-advanced {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 20px;
+      .advanced-btn {
+        border-radius: 50%;
+        padding: 2px;
+        border: none;
+        background-color: transparent;
+      }
+    }
+  }
 }
 
 @media(max-width:992px){
