--- a/assets/scss/components/_TheAudioPlayer.scss
+++ b/assets/scss/components/_TheAudioPlayer.scss
@@ -4,7 +4,7 @@
   border-radius: 12px;
   position: fixed;
   bottom: 15px;
-  z-index: 9999;
+  z-index: 99;
   width: calc(100% - 260px);
   .player-box {
     display: flex;
@@ -54,7 +54,7 @@
         height: 5px;
         width: 100%;
         cursor: pointer;
-        background-color: var(--dark-gray);
+        background-color: var(--light-blue);
         display: inline-block;
         border-radius: 5px;
         .progress-current{
@@ -105,13 +105,25 @@
         border: none;
         background-color: transparent;
       }
+      .volume-box {
+        position: relative;
+        .input-range {
+          right:  -50px;
+          bottom: 80px;
+          position: absolute;
+          transform: rotate(-90deg);
+          cursor: pointer;
+        }
+      }
     }
   }
 }
 
 @media(max-width:992px){
   .audio-player {
-    background-color: red;
-    width: 100%;
+    width: 100% ;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 }
