--- a/assets/scss/components/_TheAudioPlayer.scss
+++ b/assets/scss/components/_TheAudioPlayer.scss
@@ -65,8 +65,8 @@
           position: relative;
         }
         .progress-dot {
-          width: 20px;
-          height: 20px;
+          width: 18px;
+          height: 18px;
           background-color: var(--main-color);
           position: absolute;
           bottom: 18px;
@@ -125,5 +125,42 @@
     left: 0;
     right: 0;
     bottom: 0;
+  }
+}
+
+.sound-wrapper {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.line1 {
+  height: 40px;
+  margin: 0 2px;
+  width: 5px;
+  background-color: var(--main-color);
+  animation: dance 600ms ease-in-out infinite;
+  border-radius: 15px;
+}
+
+.line1:nth-child(2) {
+  animation-delay: 0.1s;
+}
+.line1:nth-child(3) {
+  animation-delay: 0.2s;
+}
+.line1:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+@keyframes dance {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.3);
   }
 }
