--- a/assets/scss/components/_TheMainCard.scss
+++ b/assets/scss/components/_TheMainCard.scss
@@ -37,6 +37,12 @@
       }
     }
   }
+  .cardVisible {
+    .play-box {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
   .card-body {
     padding-right: 0;
     padding-left: 0;
