--- a/assets/scss/components/_TheNav.scss
+++ b/assets/scss/components/_TheNav.scss
@@ -1,148 +1,6 @@
-.header-navbar{
-  .aside-toggle-btn{
-      color: #293042;
-      cursor: pointer;
-  }
-  .navbar {
-    background-color: var(--main-color);
-    padding: 15px;
-  }
-  .navbar-nav {
-    align-items: center;
-    gap: 30px;
-  }
-  .search-bar {
-    border-radius: 12px;
-    background-color: rgba(255,255,255,0.1);
-    position: relative;
-    width: calc(100% - 500px);
-    .input-search {
-      border: none;
-      outline: none;
-      width: 100%;
-      padding: 1rem 3rem;
-      background-color: transparent;
-      color: var(--white);
-    }
-
-    ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-      color: var(--white);
-      opacity: 1; /* Firefox */
-    }
-
-    :-ms-input-placeholder { /* Internet Explorer 10-11 */
-      color: var(--white);
-    }
-
-    ::-ms-input-placeholder { /* Microsoft Edge */
-      color: var(--white);
-    }
-    .search-icon {
-      position: absolute;
-      top: 13px;
-      left: 10px;
-    }
-  }
-
-  .user-dropdown{
-    position: relative;
-    .droopdown-menu {
-      position: absolute;
-      right: 0;
-      top: 50px;
-      margin: 0;
-      padding: 0;
-      .list {
-        background-color: #fff;
-        transition: .2s;
-        &:hover {
-          background-color: #293042;
-          .list-btn {
-            color: #fff;
-          }
-        }
-        .list-btn {
-          background-color: transparent;
-          border: none;
-          color: #293042;
-          display: block;
-          padding: 15px 40px;
-        }
-      }
-    }
-  }
-  .nav-item {
-    .nav-item-content {
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 12px;
-      background-color: rgba(255,255,255,0.1);
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      gap: 10px;
-      img {
-        border-radius: 50%;
-      }
-      .user-info {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 20px;
-        text-align: left;
-        .text {
-          font-weight: bold;
-          text-transform: capitalize;
-          color: var(--white);
-          line-height: 20px;
-          span {
-            font-weight: normal;
-            font-size: 14px;
-          }
-        }
-      }
-    }
-  }
-  .search-item {
-    display: none;
-  }
-}
-
-.fade-enter-active, .fade-leave-active {
-  transition: opacity .2s;
-}
-.fade-enter, .fade-leave-active {
-  opacity: 0;
-}
-
-@media(max-width:768px){
-  .header-navbar{
-    .search-bar{
-      display: none;
-    }
-    .navbar {
-      background-color: var(--main-color);
-    }
-    .search-item {
-      display: block;
-    }
-    .nav-item {
-      .nav-item-content {
-        border: none;
-        padding: 0.5rem 1rem;
-        border-radius: 12px;
-        background-color: rgba(255,255,255,0.1);
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 10px;
-        img {
-          border-radius: 50%;
-        }
-        .user-info {
-          display: none;
-        }
-      }
-    }
+.navbar {
+  background-color: #fff;
+  a {
+    color: #333;
   }
 }
