--- a/assets/scss/components/_TheMainCard.scss
+++ b/assets/scss/components/_TheMainCard.scss
@@ -1,9 +1,8 @@
 .card {
-  padding: 15px 15px 5px 15px;
   border: none;
   border-radius: 24px;
   .card-img-top {
-    border-radius: 24px;
+    border-radius: 24px 24px 0 0;
     overflow: hidden;
     position: relative;
     img {
@@ -44,24 +43,12 @@
     }
   }
   .card-body {
-    padding-right: 0;
-    padding-left: 0;
-    .card-stats {
-      display: flex;
-      justify-content: flex-start;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 20px;
-      .stat {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 5px;
-        .stat-text {
-          color: var(--dark-gray);
-          font-weight: 500;
-        }
-      }
+    .card-title {
+      margin: 0;
+    }
+    .card-author {
+      color: var(--dark-gray);
+      font-weight: 500;
     }
   }
 }
