📦 NEW: add open camera

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -27,3 +27,4 @@
 @import "./components/TheNav";
 @import "./components/TheMainCard";
 @import "./components/TheAudioPlayer";
+@import "./components/TheVideo";
