--- a/assets/scss/_shared.scss
+++ b/assets/scss/_shared.scss
@@ -42,6 +42,11 @@ p {
   margin: 0;
 }
 
+.mx-auto {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .flex-c {
   display: flex;
   justify-content: flex-start;
