👌 IMPROVE: change color theme and enhance design

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,5 @@
 :root {
-  --main-color: #3A9679;
+  --main-color: #2a6592;
   --title-text-color: #141A1E;
   --white: #FFFFFF;
   --light-blue: #F7F9FD;
