--- a/assets/scss/components/_TheAudioPlayer.scss
+++ b/assets/scss/components/_TheAudioPlayer.scss
@@ -36,8 +36,11 @@
       }
       .center-btn {
         border-radius: 50%;
-        background-color: rgba(58, 150, 121, 0.2);
+        background-color: rgba(42, 101, 146, 0.2);
         padding: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
       .play-btn {
         border-radius: 50%;
