--- a/assets/scss/components/_TheAudioPlayer.scss
+++ b/assets/scss/components/_TheAudioPlayer.scss
@@ -120,12 +120,12 @@
         }
       }
     }
-    .player-advanced {
+    .player-addition {
       display: flex;
       align-items: center;
       justify-content: flex-start;
       gap: 20px;
-      .advanced-btn {
+      .addition-btn {
         border-radius: 50%;
         padding: 2px;
         border: none;
